<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodDetailActivity"
    android:background="@color/background">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar_activity" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/tv_detail_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:adjustViewBounds="true"
                android:elevation="2dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/RoundedSquare"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tv_detail_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="end"
                android:textColor="@color/text_title"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Rp999.999" />

            <TextView
                android:id="@+id/tv_detail_copywr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textStyle="italic"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/text_caption"
                tools:text="Copywriter" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/text_caption"
                        android:textStyle="bold"
                        android:text="@string/deskripsi"/>

                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/tv_detail_desc"
                        android:lineSpacingMultiplier="1.2"
                        android:textColor="@color/text_light_caption"
                        tools:text="Deskripsi Detail" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/text_caption"
                        android:textStyle="bold"
                        android:text="@string/bahan" />

                    <TextView
                        android:id="@+id/tv_detail_bahan"
                        android:layout_weight="1"
                        android:lineSpacingMultiplier="1.2"
                        android:textColor="@color/text_light_caption"
                        tools:text="Bahan-bahan"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/text_caption"
                        android:textStyle="bold"
                        android:text="@string/asal_daerah" />

                    <TextView
                        android:id="@+id/tv_detail_loc"
                        android:layout_weight="1"
                        android:textColor="@color/text_light_caption"
                        tools:text="Jakarta"/>
                </TableRow>

            </TableLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/tambah"
                android:textStyle="bold"
                android:textColor="@color/text_caption"
                android:backgroundTint="@color/foreground"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:lineSpacingMultiplier="1.3"
                android:textColor="@color/text_caption"
                android:textStyle="bold"
                android:text="@string/disediakan_oleh" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/food_bank_fill0_wght400_grad0_opsz24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/makanan_nusantara"
                    android:textColor="@color/text_caption"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/circleImageView"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>